# sharding_operator

./: .gitignore  Cargo.toml  Scarb.toml  snfoundry.toml
scripts/: run.sh
src/: events.rs  main.rs
tests/: test_contract.cairo
